--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="resources/css/queries.css">
 
-    <title>Document</title>
+    <title>Vitautas Karchauskas</title>
 </head>
 <body>
 
