Added style files and plug it

--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
 
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="resources/css/queries.css">
+    <link rel="stylesheet" href="resources/vendors/css/grid.css">
+    <link rel="stylesheet" href="resources/vendors/css/normalize.css">
 
     <title>Vitautas Karchauskas</title>
 </head>
 <body>
+
+    <header>
+        <nav>
+
+
+
+        </nav>
+
+    </header>
 
 
 
