--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
     <header>
         <nav>
+            <div class="row">
+                <!-- <img src="" alt=""> -->
+
+                <ul class="main-nav">
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">About me</a></li>
+                    <li><a href="#">Contacts</a></li>
+
+
+                </ul>
+
+            </div>
 
 
 
