Added logo text

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">About me</a></li>
                     <li><a href="#">Contacts</a></li>
-
-
                 </ul>
-
             </div>
-
-
-
         </nav>
+
+        <div class="logo-text-box">
+            <h1>Vitautas<br>
+            Karchauskas</h1>
+
+        </div>
 
     </header>
 
