--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav>
             <div class="row">
-                <!-- <img src="" alt=""> -->
+                <!-- <img src="" alt="">  LOGO-->
 
                 <ul class="main-nav">
                     <li><a href="#">Shop</a></li>
