--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="resources/css/queries.css">
     <link rel="stylesheet" href="resources/vendors/css/grid.css">
-    <link rel="stylesheet" href="resources/vendors/css/normalize.css">
+    <!-- <link rel="stylesheet" href="resources/vendors/css/normalize.css"> -->
 
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,300,300i,400&display=swap" rel="stylesheet">
