--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav>
             <div class="row">
-                <!-- <img src="" alt="">  LOGO-->
+                <img class="logo" src="resources/img/logo-small.png" alt="Vitautas Karchauskas logo">
 
                 <ul class="main-nav">
                     <li><a href="#">Shop</a></li>
@@ -32,11 +32,19 @@
             </div>
         </nav>
 
-        <div class="logo-text-box">
-            <h1>Vitautas<br>
-            Karchauskas</h1>
+        <div class="row">
+            <div class="col span-1-of-2">        
+          
+                <img class="logo-big" src="resources/img/logo_big.png" alt="Vitautas Karchauskas big logo">        
 
+                <div class="logo-text-box">
+                    <h1>Vitautas<br>
+                    Karchauskas</h1>
+                </div>
+
+            </div>
         </div>
+
 
     </header>
 
