Logo, aboutme added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav>
             <div class="row">
-                <img class="logo" src="resources/img/logo-small.png" alt="Vitautas Karchauskas logo">
+                <!-- <img class="logo" src="resources/img/logo-small.png" alt="Vitautas Karchauskas logo"> -->
 
                 <ul class="main-nav">
                     <li><a href="#">Shop</a></li>
@@ -32,21 +32,34 @@
             </div>
         </nav>
 
-        <div class="row">
-            <div class="col span-1-of-2">        
-          
-                <img class="logo-big" src="resources/img/logo_big.png" alt="Vitautas Karchauskas big logo">        
+        <div class="section row">
+            <div class="col span_1_of_2">
+                <img class="logo-big" src="resources/img/logo_big.png" alt="Vitautas Karchauskas big logo">
+            </div>
 
+            <div class="col span_1_of_2">
                 <div class="logo-text-box">
                     <h1>Vitautas<br>
                     Karchauskas</h1>
                 </div>
-
             </div>
         </div>
-
-
     </header>
+
+    <section class="about-me">
+        <div class="row">
+            <h2>About me</h2>
+
+            <p class="long-copy">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem temporibus rerum commodi, quis itaque saepe. Impedit explicabo distinctio veritatis soluta modi, recusandae fugit vero doloribus iusto quasi porro voluptates non.
+
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cum repudiandae accusantium! Doloribus totam repellendus omnis distinctio harum dolor eius odio? Fuga ullam sequi modi quis nulla magnam quos quasi.
+
+
+
+
+        </div>
+    </section>
 
 
 
