Added section AboutME final

--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
 
             <p class="long-copy">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem temporibus rerum commodi, quis itaque saepe. Impedit explicabo distinctio veritatis soluta modi, recusandae fugit vero doloribus iusto quasi porro voluptates non.
+            </p>
 
+            <p class="long-copy">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cum repudiandae accusantium! Doloribus totam repellendus omnis distinctio harum dolor eius odio? Fuga ullam sequi modi quis nulla magnam quos quasi.
+            </p>
+
 
 
 
