Added anchor to AboutMe

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul class="main-nav">
                     <li><a href="#">Shop</a></li>
                     <li><a href="#">Blog</a></li>
-                    <li><a href="#">About me</a></li>
+                    <li><a href="#about-me">About me</a></li>
                     <li><a href="#">Contacts</a></li>
                 </ul>
             </div>
@@ -48,7 +48,7 @@
 
     <section class="about-me">
         <div class="row">
-            <h2>About me</h2>
+            <h2 id="about-me">About me</h2>
 
             <p class="long-copy">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem temporibus rerum commodi, quis itaque saepe. Impedit explicabo distinctio veritatis soluta modi, recusandae fugit vero doloribus iusto quasi porro voluptates non.
