--- a/index.html
+++ b/index.html
@@ -295,12 +295,53 @@
             </div>
 
             <div class="col span-1-of-2">
-                <h3>Message</h3>
+                <div class="row">
+                    <h3>We're happy to hear from you</h3>
+                </div>
 
+                <div class="row">    
+                    <form action="#" method="post" class="contact-form">
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label for="name">Name</label>
+                            </div>
 
+                            <div class="col span-2-of-3">
+                                <input type="text" name="name" id="name" placeholder="Your name" required>
+                            </div>
+                        </div>    
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label for="mail">EMail</label>
+                            </div>
 
-            </div>            
-    
+                            <div class="col span-2-of-3">
+                                <input type="email" name="mail" id="mail" placeholder="Your email" required>
+                            </div>
+                        </div>  
+
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label for="message">Drop us a line</label>
+                            </div>
+
+                            <div class="col span-2-of-3">
+                                <textarea name="message" placeholder="Your message"></textarea>
+                            </div>
+                        </div>  
+
+                        <div class="row">
+                            <div class="col span-1-of-3">
+                                <label>&nbsp;</label>
+                            </div>
+
+                            <div class="col span-2-of-3">
+                                <button type="submit">Submit</button>
+                            </div>
+                        </div>  
+                    </form>
+                </div>
+            </div>      
         </div>   
 
     </section>
