--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#">Shop</a></li>
                     <li><a href="#my-news">News</a></li>
                     <li><a href="#about-me">About me</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="#contacts">Contacts</a></li>
                 </ul>
             </div>
         </nav>
@@ -110,7 +110,7 @@
 
 
 
-    <section class="section-shop">
+    <section class="section-shop" id="shop">
             <ul class="shop-showcase clearfix">
             <li>
                 <figure class="shop-photo">
@@ -255,7 +255,7 @@
         </div>        
     </section>   
 
-    <section class="section-contacts">
+    <section class="section-contacts" id="contacts">
         <div class="row">    
             <h2>Contact us</h2>
         </div>
