Added mragin msg-header

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             </div>
 
             <div class="col span-1-of-2">
-                <div class="row">
+                <div class="row" id="msg-header"
                     <h3>We're happy to hear from you</h3>
                 </div>
 
@@ -343,7 +343,6 @@
                 </div>
             </div>      
         </div>   
-
     </section>
 
 
