--- a/index.html
+++ b/index.html
@@ -345,6 +345,18 @@
         </div>   
     </section>
 
+    <footer>
+        <div class="row">
+            <div class="col span-1-of-2">
+                <ul class="footer-nav">
+                    <li><a href="#about-me">About me</a></li>
+                    <li><a href="#my-news">Blog</a></li>
+                    <li><a href="#">Shop</a></li>                 
+               </ul>
+            </div>
+        </div>
+    </footer>
+
 
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>   
     
