--- a/index.html
+++ b/index.html
@@ -354,6 +354,25 @@
                     <li><a href="#">Shop</a></li>                 
                </ul>
             </div>
+
+            <div class="col span-1-of-2">
+                <ul class="social-links">
+                    <li><a href="https://www.facebook.com/vytautas.karciauskas" target="_blank"><ion-icon class="facebook" name="logo-facebook"></ion-icon></a></li>
+                    <!-- <li><a href="#"><ion-icon class="twitter" name="logo-twitter"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="insta" name="logo-instagram"></ion-icon></a></li>                      -->
+                </ul>
+            </div>           
+        </div>
+
+        <div class="row">
+            <div class="col span-1-of-2">
+                <p>Copyright &copy; 2019 by Vitautas Karchiauskas. All right reseverd.</p>
+            </div>
+        
+
+            <div class="col span-1-of-2">
+                <p>Html/CSS by Shpakov Vladyslav 2019(sendsay34@gmail.com)</p>
+            </div>
         </div>
     </footer>
 
