--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,300,300i,400&display=swap" rel="stylesheet">
 
+    <!-- jQuery -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+
     <title>Vitautas Karciauskas</title>
 </head>
 <body>
@@ -43,6 +46,11 @@
                     Karciauskas</h1>
                 </div>
             </div>
+        </div>
+
+        <div class="icon-bar">
+            <a href="#"><ion-icon name="mail"></ion-icon></a> 
+            <a href="https://www.facebook.com/vytautas.karciauskas" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
         </div>
     </header>
     
@@ -345,6 +353,10 @@
         </div>   
     </section>
 
+    <div id="toTop">
+        <ion-icon name="arrow-dropup-circle"></ion-icon>
+    </div>
+
     <footer>
         <div class="row">
             <div class="col span-1-of-2">
@@ -376,7 +388,7 @@
         </div>
     </footer>
 
-
+    <script src="resources/js/script.js"></script>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>   
     
 </body>
