Added scroll for all anchors

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="icon-bar">
-            <a href="#"><ion-icon name="mail"></ion-icon></a> 
+            <a href="#msg-header"><ion-icon name="mail"></ion-icon></a> 
             <a href="https://www.facebook.com/vytautas.karciauskas" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
         </div>
     </header>
@@ -303,7 +303,7 @@
             </div>
 
             <div class="col span-1-of-2">
-                <div class="row" id="msg-header"
+                <div class="row" id="msg-header">
                     <h3>We're happy to hear from you</h3>
                 </div>
 
