--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
             <div class="row">
                 <!-- <img class="logo" src="resources/img/logo-small.png" alt="Vitautas Karchauskas logo"> -->
 
-                <div class="col span-1-of-2">
-                    <a href="#"><img class="btn-flag" src="resources/img/lithuania_texture.gif" alt="Latvian country flag"></a>
-                </div>
+                <div class="flags">
+                    <div class="col span-1-of-2 flag-box">
+                        <a href="#"><img class="btn-flag" src="resources/img/lithuania_texture.gif" alt="Latvian country flag"></a>
+                    </div>
 
-                <div class="col span-1-of-2">
-                    <a href="#"><img class="btn-flag" src="resources/img/russia_texture.gif" alt="Russian country flag"></a>
-                </div>    
+                    <div class="col span-1-of-2 flag-box">
+                        <a href="#"><img class="btn-flag" src="resources/img/russia_texture.gif" alt="Russian country flag"></a>
+                    </div>    
+                </div>
 
                 <ul class="main-nav">
                     <li><a href="#">Shop</a></li>
