--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         
 
             <div class="col span-1-of-2">
-                <p>Html/CSS by Shpakov Vladyslav 2019(sendsay34@gmail.com)</p>
+                <p>Html/CSS/JS by Shpakov Vladyslav 2019(sendsay34@gmail.com, sendsay@yahoo.com)</p>
             </div>
         </div>
     </footer>
