Added aboutme page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="row">
-            <a class="more-button" href="#">More >>></a>
+            <a class="more-button" href="aboutme.html">More >>></a>
         </div>
     </section>
 
