Fix err & added toTop butt beheivor

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <div class="col span-1-of-2">
                 <div class="logo-text-box">
-                    <h1>Vitautas<br>
+                    <h1>Vytautas<br>
                     Karciauskas</h1>
                 </div>
             </div>
