--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="resources/css/queries.css">
     <link rel="stylesheet" href="resources/vendors/css/grid.css">
     <link rel="stylesheet" href="resources/vendors/css/normalize.css">
-
+    
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,300,300i,400&display=swap" rel="stylesheet">
 
@@ -78,7 +78,7 @@
         </div>
 
         <div class="row">
-            <a class="more-button" href="aboutme.html">More >>></a>
+            <a class="more-button transition" href="aboutme.html">More >>></a>
         </div>
     </section>
 
@@ -239,7 +239,7 @@
         </div>
 
         <div class="row">
-            <a class="more-button" href="#">More >>></a>
+            <a class="more-button transition" href="#">More >>></a>
         </div>
     </section>
 
