Added blog&shop page with style

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
 
                 <ul class="main-nav">
-                    <li><a href="#">Shop</a></li>
+                    <li><a href="shop.html">Shop</a></li>
                     <li><a href="#my-news">News</a></li>
                     <li><a href="#about-me">About me</a></li>
                     <li><a href="#contacts">Contacts</a></li>
@@ -239,7 +239,7 @@
         </div>
 
         <div class="row">
-            <a class="more-button transition" href="#">More >>></a>
+            <a class="more-button transition" href="blog.html">More >>></a>
         </div>
     </section>
 
@@ -372,8 +372,8 @@
             <div class="col span-1-of-2">
                 <ul class="footer-nav">
                     <li><a href="#about-me">About me</a></li>
-                    <li><a href="#my-news">Blog</a></li>
-                    <li><a href="#">Shop</a></li>                 
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="shop.html">Shop</a></li>                 
                </ul>
             </div>
 
