added shodow totop button

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,9 +15,9 @@
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,300,300i,400&display=swap" rel="stylesheet">
 
     <!-- jQuery -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    <title>Vitautas Karciauskas</title>
+    <title>Vytautas Karciauskas</title>
 </head>
 <body>
 
@@ -366,6 +366,7 @@
     <div id="toTop">
         <ion-icon name="arrow-dropup-circle"></ion-icon>
     </div>
+    <div class="toTopBackGround"></div>
 
     <footer>
         <div class="row">
@@ -399,7 +400,7 @@
     </footer>
 
     <script src="resources/js/script.js"></script>
-    <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>   
+    <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>  
     
 </body>
 </html>
