probe fix totop problem

--- a/index.html
+++ b/index.html
@@ -364,8 +364,9 @@
     </section>
 
     <div id="toTop">
-        <ion-icon name="arrow-dropup-circle"></ion-icon>
-        <div class="toTopBackGround"></div>
+        <div class="toTopBackGround">
+            <ion-icon name="arrow-dropup-circle"></ion-icon>
+        </div>        
     </div>
     
 
