Added shadows to iconar & toTop button

--- a/aboutme.html
+++ b/aboutme.html
@@ -106,11 +106,12 @@
             <div class="long-copy thanx">
                 <h3>Thanx for reading.</h3>
             </div>
-
         </div>
 
         <div id="toTop">
-                <ion-icon name="arrow-dropleft-circle"></ion-icon>
+            <div class="toTopBackGround">
+                <ion-icon id="toTopImg" name="arrow-dropleft-circle"></ion-icon>
+            </div>        
         </div>
     </section>
 
