--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:100,300,300i,400&display=swap" rel="stylesheet">
 
     <!-- jQuery -->
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <title>Vytautas Karciauskas</title>
 </head>
 <body>
-
     <header>
         <nav>
             <div class="row">
@@ -365,7 +364,7 @@
 
     <div id="toTop">
         <div class="toTopBackGround">
-            <ion-icon name="arrow-dropup-circle"></ion-icon>
+            <ion-icon id="toTopImg" name="arrow-dropup-circle"></ion-icon>
         </div>        
     </div>
     
