Added shadows to map and msg card

--- a/index.html
+++ b/index.html
@@ -302,16 +302,16 @@
         </div>
 
         <div class="row">
-            <div class="col span-1-of-2">
+            <div class="col span-1-of-2 card-map">
                 <div class="mapouter">
                     <div class="gmap_canvas">
-                        <iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=Peda%2C%20galerija%2C%20Klampeda&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de"></a>
+                        <iframe width="600" height="439" id="gmap_canvas" src="https://maps.google.com/maps?q=Peda%2C%20galerija%2C%20Klampeda&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0"></iframe>
                     </div>
                     
                 </div>
             </div>
 
-            <div class="col span-1-of-2">
+            <div class="col span-1-of-2 card-msg">
                 <div class="row" id="msg-header">
                     <h3>We're happy to hear from you</h3>
                 </div>
