--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <h2>Contact us</h2>
         </div>
         
-        <div class="row">
+        <div class="row contact-row">
             <div class="col span-1-of-3 box">
                 <ion-icon class="icon-big icon-contacts"  name="locate"></ion-icon>
                 <h3>Address</h3>
