Change more button style

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         </div>
 
         <div class="row">
-            <a class="more-button transition" href="aboutme.html">More >>></a>
+            <!-- <a class="more-button transition" href="aboutme.html">More >>></a> -->
+            <a class="btn btn-full more-button" href="aboutme.html">More >>></a>
         </div>
     </section>
 
@@ -238,7 +239,7 @@
         </div>
 
         <div class="row">
-            <a class="more-button transition" href="blog.html">More >>></a>
+            <a class="btn btn-full more-button" href="blog.html">More >>></a>
         </div>
     </section>
 
