--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
             </div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
             <a class="btn btn-full more-button" href="blog.html">More</a>
-        </div>
+        </div> -->
     </section>
 
     <section class="section-testimonials">
