--- a/shop.html
+++ b/shop.html
@@ -31,6 +31,7 @@
             <div class="col span-1-of-4 shop-card">
                 <figure class="shop-photo">
                     <img src="resources/img/IMG_0168.jpg" alt="Image 4">
+                    <h4>Id#103884</h4>
                 </figure>
                
                 <div class="row">
@@ -39,10 +40,10 @@
                     </div>
                     <div class="fieldquantity">
                         <div class="col span-1-of-3">
-                                <h3>Quantity:</h3>
+                                <h3 class="header-quantity">Quantity:</h3>
                         </div>
                         <div class="col span-1-of-3">
-                            <input type="number" name="quantity" min="1" max="10" value="1">
+                            <input class="quantity" type="number" name="quantity" min="1" max="10" value="1">
                         </div>  
                     </div>
                 </div>
