--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
         <div class="row">
             <div class="col span-1-of-2">
-                <p>Copyright &copy; 2019 by Vitautas Karchiauskas. All right reseverd.</p>
+                <p>Copyright &copy; <span id="year">2010</span> by Vitautas Karchiauskas. All right reseverd.</p>
             </div>
         
 
