Added select shop page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <ul class="main-nav">
-                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="shop_select.html">Shop</a></li>
                     <li><a href="#my-news">News</a></li>
                     <li><a href="#about-me">About me</a></li>
                     <li><a href="#contacts">Contacts</a></li>
@@ -437,7 +437,7 @@
                 <ul class="footer-nav">
                     <li><a href="#about-me">About me</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="shop.html">Shop</a></li>                 
+                    <li><a href="shop_select.html">Shop</a></li>                 
                </ul>
             </div>
 
@@ -468,8 +468,28 @@
         </div>        
     </div>
 
+<!--
+..######...######..########..####.########..########..######.
+.##....##.##....##.##.....##..##..##.....##....##....##....##
+.##.......##.......##.....##..##..##.....##....##....##......
+..######..##.......########...##..########.....##.....######.
+.......##.##.......##...##....##..##...........##..........##
+.##....##.##....##.##....##...##..##...........##....##....##
+..######...######..##.....##.####.##...........##.....######.
+-->
+
     <script src="resources/js/script.js"></script>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>  
     
 </body>
 </html>
+
+<!--
+.########.##....##.########.
+.##.......###...##.##.....##
+.##.......####..##.##.....##
+.######...##.##.##.##.....##
+.##.......##..####.##.....##
+.##.......##...###.##.....##
+.########.##....##.########.
+-->
