--- a/aboutme.html
+++ b/aboutme.html
@@ -22,6 +22,17 @@
     <title>About Vitautas</title>
 </head>
 <body>
+
+<!--
+.##.....##.########....###....########..########.########.
+.##.....##.##.........##.##...##.....##.##.......##.....##
+.##.....##.##........##...##..##.....##.##.......##.....##
+.#########.######...##.....##.##.....##.######...########.
+.##.....##.##.......#########.##.....##.##.......##...##..
+.##.....##.##.......##.....##.##.....##.##.......##....##.
+.##.....##.########.##.....##.########..########.##.....##
+-->
+
     <header>
         <div class="row">
             <div class="header">
@@ -35,7 +46,17 @@
                 </div>
             </div>
         </div>
-    </header>  
+    </header> 
+    
+<!--
+....###....########...#######..##.....##.########....##.....##.########
+...##.##...##.....##.##.....##.##.....##....##.......###...###.##......
+..##...##..##.....##.##.....##.##.....##....##.......####.####.##......
+.##.....##.########..##.....##.##.....##....##.......##.###.##.######..
+.#########.##.....##.##.....##.##.....##....##.......##.....##.##......
+.##.....##.##.....##.##.....##.##.....##....##.......##.....##.##......
+.##.....##.########...#######...#######.....##.......##.....##.########
+-->
     
     <section class="about-me">
         <div class="row">
@@ -115,7 +136,17 @@
         </div>
     </section>
 
-    <script src="resources/js/script_aboutme.js"></script>
+<!--
+..######...######..########..####.########..########..######.
+.##....##.##....##.##.....##..##..##.....##....##....##....##
+.##.......##.......##.....##..##..##.....##....##....##......
+..######..##.......########...##..########.....##.....######.
+.......##.##.......##...##....##..##...........##..........##
+.##....##.##....##.##....##...##..##...........##....##....##
+..######...######..##.....##.####.##...........##.....######.
+-->
+
+    <script src="resources/js/script.js"></script>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>   
 
 </body>
