dosnt work js on about opage

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h1>Vytautas<br>
                     Karciauskas</h1>
                 </div>
-            </div>
+            </div> m
         </div>
 
         <div class="icon-bar">
