--- a/shop_select.html
+++ b/shop_select.html
@@ -129,10 +129,21 @@
 
     <div id="toTop">
         <div class="toTopBackGround">
-            <a href="index.html"> <ion-icon id="toTopImg" name="arrow-dropleft-circle"></ion-icon></a>
+            <ion-icon id="toTopImg" name="arrow-dropleft-circle"></ion-icon>
         </div>        
     </div>
 
+<!--
+..######...######..########..####.########..########..######.
+.##....##.##....##.##.....##..##..##.....##....##....##....##
+.##.......##.......##.....##..##..##.....##....##....##......
+..######..##.......########...##..########.....##.....######.
+.......##.##.......##...##....##..##...........##..........##
+.##....##.##....##.##....##...##..##...........##....##....##
+..######...######..##.....##.####.##...........##.....######.
+-->
+
+    <script src="resources/js/script.js"></script>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script> 
 </body>
 </html>
