--- a/aboutme.html
+++ b/aboutme.html
@@ -126,13 +126,54 @@
                 <h3>Thanx for reading.</h3>
             </div>
         </div>
-
-        <div id="toTop">
-            <div class="toTopBackGround">
-                <ion-icon id="toTopImg" name="arrow-dropleft-circle"></ion-icon>
-            </div>        
-        </div>
     </section>
+
+<!--
+.########..#######...#######..########.########.########.
+.##.......##.....##.##.....##....##....##.......##.....##
+.##.......##.....##.##.....##....##....##.......##.....##
+.######...##.....##.##.....##....##....######...########.
+.##.......##.....##.##.....##....##....##.......##...##..
+.##.......##.....##.##.....##....##....##.......##....##.
+.##........#######...#######.....##....########.##.....##
+-->
+
+    <footer>
+        <div class="row">
+            <div class="col span-1-of-2">
+                <ul class="footer-nav">
+                    <li><a href="#about-me">About me</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="shop_select.html">Shop</a></li>                 
+            </ul>
+            </div>
+
+            <div class="col span-1-of-2">
+                <ul class="social-links">
+                    <li><a href="https://www.facebook.com/vytautas.karciauskas" target="_blank"><ion-icon class="facebook" name="logo-facebook"></ion-icon></a></li>
+                    <!-- <li><a href="#"><ion-icon class="twitter" name="logo-twitter"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="insta" name="logo-instagram"></ion-icon></a></li>                      -->
+                </ul>
+            </div>           
+        </div>
+
+        <div class="row">
+            <div class="col span-1-of-2">
+                <p>Copyright &copy; <span id="year">2010</span> by Vitautas Karchiauskas. All right reseverd.</p>
+            </div>
+        
+
+            <div class="col span-1-of-2">
+                <p>Html/CSS/JS by Shpakov Vladyslav 2019(sendsay34@gmail.com, sendsay@yahoo.com)</p>
+            </div>
+        </div>
+    </footer>
+
+    <div id="toTop">
+        <div class="toTopBackGround">
+            <ion-icon id="toTopImg" name="arrow-dropleft-circle"></ion-icon>
+        </div>        
+    </div>
 
 <!--
 ..######...######..########..####.########..########..######.
