--- a/shop_juv.html
+++ b/shop_juv.html
@@ -185,7 +185,144 @@
             </div>              
         </div>
 
+        <div class="row">
+            <div class="col span-1-of-4 shop-card">
+                <figure class="shop-photo">
+                    <h4 class="id">Id# 103884</h4>
+                    <img src="resources/img/IMG_0168.jpg" alt="Image 4">                    
+                </figure>               
+                <div class="row">
+                    <div class="col span-1-of-3 buy-check">
+                        <input type="checkbox" name="Buy" id="buy">Buy
+                    </div>
+                    <div class="fieldquantity">
+                        <div class="col span-1-of-3">
+                                <h3 class="header-quantity">Quantity:</h3>
+                        </div>
+                        <div class="col span-1-of-3">
+                            <input class="quantity" type="number" name="quantity" min="1" max="10" value="1">
+                        </div>  
+                    </div>
+                </div>
+            </div>
+            <div class="col span-1-of-4 shop-card">
+                <figure class="shop-photo">
+                    <h4 class="id">Id# 103884</h4>
+                    <img src="resources/img/IMG_0168.jpg" alt="Image 4">                    
+                </figure>               
+                <div class="row">
+                    <div class="col span-1-of-3 buy-check">
+                        <input type="checkbox" name="Buy" id="buy">Buy
+                    </div>
+                    <div class="fieldquantity">
+                        <div class="col span-1-of-3">
+                                <h3 class="header-quantity">Quantity:</h3>
+                        </div>
+                        <div class="col span-1-of-3">
+                            <input class="quantity" type="number" name="quantity" min="1" max="10" value="1">
+                        </div>  
+                    </div>
+                </div>
+            </div>
+            <div class="col span-1-of-4 shop-card">
+                <figure class="shop-photo">
+                    <h4 class="id">Id# 103884</h4>
+                    <img src="resources/img/IMG_0168.jpg" alt="Image 4">                    
+                </figure>               
+                <div class="row">
+                    <div class="col span-1-of-3 buy-check">
+                        <input type="checkbox" name="Buy" id="buy">Buy
+                    </div>
+                    <div class="fieldquantity">
+                        <div class="col span-1-of-3">
+                                <h3 class="header-quantity">Quantity:</h3>
+                        </div>
+                        <div class="col span-1-of-3">
+                            <input class="quantity" type="number" name="quantity" min="1" max="10" value="1">
+                        </div>  
+                    </div>
+                </div>
+            </div>
+            <div class="col span-1-of-4 shop-card">
+                <figure class="shop-photo">
+                    <h4 class="id">Id# 103884</h4>
+                    <img src="resources/img/IMG_0168.jpg" alt="Image 4">                    
+                </figure>               
+                <div class="row">
+                    <div class="col span-1-of-3 buy-check">
+                        <input type="checkbox" name="Buy" id="buy">Buy
+                    </div>
+                    <div class="fieldquantity">
+                        <div class="col span-1-of-3">
+                                <h3 class="header-quantity">Quantity:</h3>
+                        </div>
+                        <div class="col span-1-of-3">
+                            <input class="quantity" type="number" name="quantity" min="1" max="10" value="1">
+                        </div>  
+                    </div>
+                </div>
+            </div>              
+        </div>
     </section>
-    
+
+<!--
+.########..#######...#######..########.########.########.
+.##.......##.....##.##.....##....##....##.......##.....##
+.##.......##.....##.##.....##....##....##.......##.....##
+.######...##.....##.##.....##....##....######...########.
+.##.......##.....##.##.....##....##....##.......##...##..
+.##.......##.....##.##.....##....##....##.......##....##.
+.##........#######...#######.....##....########.##.....##
+-->
+    <footer>
+        <div class="row">
+            <div class="col span-1-of-2">
+                <ul class="footer-nav">
+                    <li><a href="#about-me">About me</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="shop_select.html">Shop</a></li>                 
+            </ul>
+            </div>
+
+            <div class="col span-1-of-2">
+                <ul class="social-links">
+                    <li><a href="https://www.facebook.com/vytautas.karciauskas" target="_blank"><ion-icon class="facebook" name="logo-facebook"></ion-icon></a></li>
+                    <!-- <li><a href="#"><ion-icon class="twitter" name="logo-twitter"></ion-icon></a></li>
+                    <li><a href="#"><ion-icon class="insta" name="logo-instagram"></ion-icon></a></li>                      -->
+                </ul>
+            </div>           
+        </div>
+
+        <div class="row">
+            <div class="col span-1-of-2">
+                <p>Copyright &copy; <span id="year">2010</span> by Vitautas Karchiauskas. All right reseverd.</p>
+            </div>
+        
+
+            <div class="col span-1-of-2">
+                <p>Html/CSS/JS by Shpakov Vladyslav 2019(sendsay34@gmail.com, sendsay@yahoo.com)</p>
+            </div>
+        </div>
+    </footer>
+
+    <div id="toTop">
+        <div class="toTopBackGround">
+            <ion-icon id="toTopImg" name="arrow-dropleft-circle"></ion-icon>
+        </div>        
+    </div>
+
+<!--
+..######...######..########..####.########..########..######.
+.##....##.##....##.##.....##..##..##.....##....##....##....##
+.##.......##.......##.....##..##..##.....##....##....##......
+..######..##.......########...##..########.....##.....######.
+.......##.##.......##...##....##..##...........##..........##
+.##....##.##....##.##....##...##..##...........##....##....##
+..######...######..##.....##.####.##...........##.....######.
+-->
+
+    <script src="resources/js/script.js"></script>
+    <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>   
+   
 </body>
 </html>
