--- a/shop_juv.html
+++ b/shop_juv.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <div class="row">
-            <h2>Our shop</h2>
+            <h2 class="header">Our shop</h2>
         </div>
     </header>
 
