Change about info

--- a/aboutme.html
+++ b/aboutme.html
@@ -59,64 +59,84 @@
     <section class="about-me">
         <div class="row">
             <div class="long-copy">
-                <p>
-                    Let me introduce myself, my name is Olga Petrova. I was born in the 19 th of February, 1994 in Kursk, which is the town of Russia. I am sixteen. I am a pupil. I study in the 11 th form. Our family is big. There are four of us: mother, father, little brother and me.
+                <p>Karciauskas Vytautas, a professional artist, 'gallery Peda' owner ,and member of Lithuanian Artists Association.
                 </p>
+                <br>
 
                 <p>
-                    My brother`s name is Anton. He is 11. Anton is nice and funny.
-                </p>
-                
-                <p>
-                    My parents are young. My mom is a good-looking woman. She is 39. She has two high educations. She works as economist. My mother likes reading books and magazines and she knows a lot of interesting things. She always helps me with my problems.
-                </p>
-                
-                <p>
-                    My father is 41. He is a journalist. He likes his work very much. My father cooks well too. He always makes new dishes and they are very tasty.
+                Exhibitions in Lithuania and abroad (since 1976).
                 </p>
 
-                <p>
-                    In the evening all members of our family like to watch TV. Sometimes we go to the theater or concert. We are a friendly family. We are deeply attached to each other, and we get on very well.
-                </p>
+                <br>
 
                 <p>
-                    I study well. My favorite school subjects are English, Russian, Literature and others. I want to learn Spanish and French too.
-                </p>
+                1978 - graduated from the Estonian State Art Institute.
+                <br>      
+                In 1978. - Design Institute of Tartu (Estonia) has developed a spatial composition (H-16, 8 × 9 m).
+                <br>
+                In 1981. - Decorative panel "Energy" (H-6.5 m) in Klaipeda
+                <br>
+                In 1981. - Designed to panel "knowledge" (1.7 x 0.7 m.) Moscow (International Competition)
+                <br>
+                1982-1984 m. Klaipeda-created post of pigeons interior of the metal composition.
+                <br>
+                1980 .. - Souvenir of Moscow created in 1989 - 1990, the Olympic Games (International Competition)
+                <br>
+                In 1991. - Founded in Klaipėda Art Gallery "Pėda"
+                <br>
+                In 1996. - Mobile composition "Flight" (h - 2.5 m). TEO central building (Vilnius)
+                <br>
+                In 1998. - Personal exhibition "The Road" in Klaipėda
+                <br>
+                In 1999. - Set up his own sculpture park "Garden Isle" (2 ha letters, Klaipėda district).
+                <br>
+                In 2000-2001. Solo Exhibitions French Cultural center in Vilnius
+                <br>
+                In 2001. - Established an annual award in honor of the Klaipėda region doctors "wholeheartedly"
+                <br>
+                (partner dr. J. condition and Klaipėda Hospital)
+                <br>
+                In 2002. - Mobile sculpture "Taurus" (h-2 m.) (Athens)
+                <br>
+                In 2002. - Mobile design "Evolution" (H-2.3 m). Hotel Klaipėda (Klaipėda)
+                <br>
+                In 2004. - Set up an annual award of "Tolerance" for solemn enlightened West Lithuania
+                <br>
+                (Associate newspaper Klaipėda)
+                <br>
+                Since 2004. - Established KLASCO Award - for outstanding sculpture of Klaipeda University people. 
+                <br>
+                Author - Vytautas Karčiauskas
+                <br>
+                In 2005. - Given the status of Lithuanian artists
+                <br>
+                In 2007. - City have donated the sculpture "The Legend" (h - 3.6 m)
+                <br>
+                In 2007. 07 02 d. organized singing poetry festival, marking the first town of Klaipėda Name.
+                <br>
+                In 2008. - The Lithuanian reform movement marked the twentieth Klaipėda was initiated 
+                <br>
+                and developed a granite panel, "Our Movement"
+                <br>
+                In 2009. - Has an impressive sculpture of steel "Wave" 
+                <br>
+                (University of Klaipeda yard h, 2.3 × 5 × 1.5 m; architect G. Reisgys)
+                <br>
+                In 2009. - To create and deliver prizes worldwide regatta The Tall Ship's Races Baltic 2009 winners
+                <br>
+                (International Competition, co-author Laura Potet)
+                <br>
+                In 2010. - A mobile composition "I want to be ..." (h - 3,35 m.). This composition represents 
 
-                <p>
-                    It is important to have friends. My friends name is Oksana. She lives not far from me. It’s not easy to meet a true and faithful friend. I am happy that I have got Oksana. I trust her and I’m sure that I can rely on her in any situation. She is the single person who can ask for help and advice in unhappy moments of my life and whom I can tell all my problems. She never lets people down. I miss Oksana when we don’t see each other for a long time. I think our friendship makes me feel confident; share to over feelings and opinions. Personally, I think that friendship is a great force.
-                </p>
-
-                <p>
-                    There are many interesting and exciting things to do when you are spending your free time. Each person has his interests and hobbies such as reading books, watching TV, going in for sports. As for me, I have many hobbies: they are – cooking, dancing, singing, and English language. I also fond of reading books. My favorite books are adventures and horror, love stories. When I am reading book I live the character`s life, suffer, and enjoy with them. My favorite hobby is studying English. I think it is necessary to have a hobby. Your free time is not wasted.
-                </p>
-
-                <p>
-                    Everybody likes music – some people enjoy classical music, others are fond of popular music. Open-minded, I like all kinds of music. I am a meloman. Some music is happy, and some is sad. Some is serious, and some can make people laugh.
-                </p>
-
-                <p>
-                    My family likes holidays a lot. We usually celebrate each of them with a lot of food and presents and big groups of relatives and friends.
-                </p>
-
-                <p>
-                    I like New Year very much. My mother and I usually decorate a New Year tree with colorful glass balls and toys. I also cook New Year supper, especially salads. At night we have a real feast.
-                </p>
-
-                <p>
-                    My other favorite celebration is my birthday which is in February. This day I am in the centre of attention. My parents and friends give me presents, and I usually have birthday party. I invite my friends and we have fun together. I really enjoy holidays and celebrations.
-                </p>
-
-                <p>
-                    In early childhood it does not take children much time to answer the question «what do you want to be when you grow up?». They mentioned many interesting and exciting professions, the most popular ones are a pilot, a cosmonaut, a businessman. As the years pass, they change their minds.
-                </p>
-
-                <p>
-                    I know there are many interesting and useful professions but most of all I like the profession of an interpreter. Why? Because I like English language. It is necessary to learn foreign languages. That is why pupils have got such subject as a foreign language at school. Everybody knows his own language but it is useful to know foreign languages too. I want to read in original literature.
-                </p>
-
-                <p>
-                    I like to travel, but it is difficult to visit countries, when you do not know the language spoken there. If I know the language of the country which I am going to visit it will be easy to travel there. If I want to ask something, I can do it in English. There are international friendship camps in the world. If you can speak foreign languages, it will be easy for you to visit such camps and speak with people there. I think that English will be my future career because I am good at this language.
+                the Lithuanian art world exhibition in Shanghai Expo2010.
+                <br>
+                In 2010. - For the famous people in commemoration of achievements and active participation in cultural life
+                <br>
+                in the region of Klaipeda, V. Karčiauskas Klaipėda County was awarded a badge of honor.
+                <br>
+                2012. - Vytautas Karčiauskas represent the Lithuania art in worl exhibition Expo2012, Yeosu Korea.
+                <br>
+                2012. - Exibition with Laura Potet in Paris design week.
                 </p>
             </div>
         </div>
