--- a/index.html
+++ b/index.html
@@ -89,16 +89,19 @@
             <h2>About me</h2>
 
             <p class="long-copy">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem temporibus rerum commodi, quis itaque saepe. Impedit explicabo distinctio veritatis soluta modi, recusandae fugit vero doloribus iusto quasi porro voluptates non.
+                Karciauskas Vytautas, a professional artist<br>
+                'gallery Peda' owner<br>
+                member of Lithuanian Artists Association.       
             </p>
 
+            <br>
+
             <p class="long-copy">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cum repudiandae accusantium! Doloribus totam repellendus omnis distinctio harum dolor eius odio? Fuga ullam sequi modi quis nulla magnam quos quasi.
+                Exhibitions in Lithuania and abroad (since 1976).
             </p>
         </div>
 
         <div class="row">
-            <!-- <a class="more-button transition" href="aboutme.html">More >>></a> -->
             <a class="btn btn-full more-button" href="aboutme.html">More </a>
         </div>
     </section>
